Improved the tab behind-the-scenes.